deployment/security/authz-gateway-extauthz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gateway-extauthz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: auth-service-extauthz
  rules:
    - to:
        - operation:
            paths: ["/api/*"]
            notPaths: ["/api/offices", "/api/offices/*"]
